--- a/HomeWork/index.html
+++ b/HomeWork/index.html
@@ -7,6 +7,7 @@
     <title>Home Work 1</title>
 </head>
 <body>
+    <h1>hello js</h1>
     <script src="./js/script.js"></script>
 </body>
 </html>
